data/derived/comb/progs/unify/prog8919.ml.out
Characters 87-97:
  (value * not result)
           ^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
